@@ -482,6 +482,7 @@ Release 0.21.0 - Unreleased
    HBASE-2402  [stargate] set maxVersions on gets
    HBASE-2087  The wait on compaction because "Too many store files" 
                holds up all flushing
+   HBASE-2252  Mapping a very big table kills region servers
 
   NEW FEATURES
    HBASE-1961  HBase EC2 scripts
